# AIDetector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
ai_detector/modules/: module.py  to_onnx.py
ai_detector/test/: test.py
ai_detector/train/: train.py
config/: config.yaml
config/data/: data.yaml
config/dvc/: dvc_config.yaml
config/logging/: logging.yaml
config/metrics/: metrics.yaml
config/model/: model.yaml
config/onnx/: onnx.yaml
config/test/: test.yaml
config/train/: train.yaml
config/web/: web.yaml
data/: download_data.py  raw.dvc
data/scripts/: prepare.py
model/: .gitignore  detector_local_training.dvc
src/modules/: module.py  to_onnx.py
src/test/: test.py
src/train/: train.py
src/web/: app.py
src/web/templates/: index.html
triton/: docker-compose.yml
triton/models/detector/: config.pbtxt
